--- a/AloTraWebsite/src/main/resources/application.properties
+++ b/AloTraWebsite/src/main/resources/application.properties
@@ -30,3 +30,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 # THÊM DÒNG NÀY VÀO
 # Dòng này bảo Hibernate giữ nguyên tên bảng và cột bạn đã định nghĩa trong Entity
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Cloudinary Configuration
+cloudinary.cloud_name=dmxxo6wgl
+cloudinary.api_key=315628768938735
+cloudinary.api_secret=w9ziEUTs3giXY9hR8O1S75NBIF4
+
+# Giới hạn cho một file duy nhất (ví dụ: 10 Megabytes)
+spring.servlet.multipart.max-file-size=10MB
+
+# Giới hạn cho tổng dung lượng của toàn bộ request (bao gồm cả các file và dữ liệu form khác)
+spring.servlet.multipart.max-request-size=10MB
