--- a/AloTraWebsite/pom.xml
+++ b/AloTraWebsite/pom.xml
@@ -133,6 +133,11 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
+		<!-- OAuth2 Google Login -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 
 		<dependency>
         <groupId>org.apache.poi</groupId>
